webextensions/sidebar/styles/base.css
@charset "UTF-8";
/*
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
*/

:root {
  /* default size, they will be overridden. */
  --favicon-size: 16px;
  --tab-height: 32px;
  --faviconized-tab-size: 28px;

  --color-animation: 0.25s ease-out;
  --indent-animation: var(--indent-duration) ease-out;
  --collapse-animation: var(--collapse-duration) ease-out;
  --tab-animation: background    var(--color-animation),
                   bottom        var(--collapse-animation),
                   color         var(--color-animation),
                   left          var(--collapse-animation),
                   margin-bottom var(--collapse-animation),
                   margin-top    var(--collapse-animation),
                   max-height    var(--collapse-animation),
                   max-width     var(--collapse-animation),
                   min-height    var(--collapse-animation),
                   min-width     var(--collapse-animation),
                   opacity       var(--collapse-animation),
                   right         var(--collapse-animation),
                   top           var(--collapse-animation);
  --tab-indent-animation: margin-left   var(--indent-animation),
                          margin-right  var(--indent-animation);

  --button-opacity: 0.75;
  --button-hover-opacity: 1;
  --button-active-opacity: 0.5;

  --tab-highlighted-highlight: white;
  --tab-highlighted-glow: Highlight;
  --tab-highlighted-base: transparent;
  --unread-faviconized-gradient: radial-gradient(circle farthest-corner at 50% calc(100% - 3px),
                                                 var(--tab-highlighted-highlight) 3%,
                                                 var(--tab-highlighted-glow) 10%,
                                                 var(--tab-highlighted-base) 20%);
  --unread-faviconized-gradient-hover: radial-gradient(circle farthest-corner at 50% calc(100% - 3px),
                                                       var(--tab-highlighted-highlight) 3%,
                                                       var(--tab-highlighted-glow) 10%,
                                                       var(--tab-highlighted-base) 23%);
}

@keyframes blink {
  0% { opacity: 0; }
  50% { opacity: 1; }
  100% { opacity: 0; }
}

:root.debug * {
  outline: 1px dotted rgba(255, 0, 0, 0.5);
}

/* This is required to prevent dragging of images (ex. favicon).
   Otherwise they are unexpectedly dragged just as an image and
   it is downloadable via dropping on the desktop or others. */
img {
  pointer-events: none;
}

button {
  -moz-user-focus: ignore;
}

.vbox {
  align-items: stretch;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;
}


/* tabbar */

:root, body {
  font: message-box; /* this is same to Firefox's UI. */
}

#tabbar {
  bottom: 0;
  left: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: fixed;
  right: 0;
  top: 0;
}
#tabbar.overflow {
  overflow-y: scroll;
}

:root.animation #tabbar {
  transition: margin-top var(--collapse-animation);
}

/* put scrollbar leftside */
:root.left #tabbar {
  direction: rtl;
}
:root.left #all-tabs,
:root.left #tabbar .after-tabs {
  direction: ltr;
}

/* narrow scrollbar */

:root.left.narrow-scrollbar #tabbar.overflow,
:root.right.narrow-scrollbar #tabbar.overflow ~ #tabContextMenu,
:root.right.narrow-scrollbar #tabbar.overflow ~ #tabContextMenu ul {
  margin-left: calc(var(--narrow-scrollbar-size) - var(--scrollbar-size));
}

:root.right.narrow-scrollbar #tabbar.overflow,
:root.left.narrow-scrollbar #tabbar.overflow ~ #tabContextMenu,
:root.left.narrow-scrollbar #tabbar.overflow ~ #tabContextMenu ul {
  margin-right: calc(var(--narrow-scrollbar-size) - var(--scrollbar-size));
}

/* no scrollbar */

:root.left.no-scrollbar #tabbar.overflow,
:root.right.no-scrollbar #tabbar.overflow ~ #tabContextMenu,
:root.right.no-scrollbar #tabbar.overflow ~ #tabContextMenu ul {
  margin-left: calc(0px - var(--scrollbar-size));
}

:root.right.no-scrollbar #tabbar.overflow,
:root.left.no-scrollbar #tabbar.overflow ~ #tabContextMenu,
:root.left.no-scrollbar #tabbar.overflow ~ #tabContextMenu ul {
  margin-right: calc(0px - var(--scrollbar-size));
}


ul {
  flex-grow: 1;
  list-style: none;
  margin: 0;
  padding: 0;
}


/* dummy elements to calculate actual size of boxes */

#dummy-tabs {
  bottom: 0;
  pointer-events: none;
  overflow-y: scroll;
  position: fixed;
  visibility: hidden;
}

#dummy-favicon-size-box {
  display: inline-block;
  width: 1em;
  height: 1em;
  max-width: 1em;
  max-height: 1em;
  min-width: 16px;
  min-height: 16px;
}


/* tabs */

.tab {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  left: 0;
  line-height: 1;
  list-style: none;
  margin-left: 0;
  margin-right: 0;
  /* margin-top: 0; *//* don't set for animation */
  max-width: 100%;
  overflow: hidden;
  opacity: 1;
  position: relative;
  top: 0;
}

.tab,
.tab * {
  vertical-align: middle;
}

.tab > * {
  position: relative;
  z-index: 100;
}

:root.animation .tab.animation-ready,
:root.animation .after-tabs button {
  transition: var(--tab-animation);
}
:root.animation .tab.animation-ready:not(.expanding),
:root.animation .tab.animation-ready.expanding.moving {
  transition: var(--tab-animation),
              var(--tab-indent-animation);
}

.tab.removing,
.tab.collapsed,
.tab.duplicating {
  margin-top: calc(0px - var(--tab-height));
  opacity: 0;
  pointer-events: none;
  z-index: -100;
}

.tab.collapsed-completely {
  visibility: collapse;
}

.tab.duplicating {
  transition: none;
}


:root.left .tab .twisty {
  order: -1;
}
:root.left .tab .closebox {
  order: 10000;
}

:root.right .tab .twisty {
  order: 10000;
}
:root.right .tab .closebox {
  order: -1;
}

.tab .active-marker,
.tab .burster,
.tab .extra-items-container.behind {
  bottom: 0;
  left: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.tab .active-marker {
  z-index: 5000;
}

.tab .burster {
  z-index: 4000;
}

.tab .extra-items-container.behind {
  z-index: 10;
}


/* pinned tabs */

.tab.pinned {
  border-top: none;
  border-left: none;
  margin: 0;
  position: fixed;
  z-index: 1; /* this is required to make pinned tabs clickable */
}

.tab.pinned:not(.faviconized) {
  left: 0;
  right: 0;
}

.tab.faviconized {
  height: var(--faviconized-tab-size);
  max-height: var(--faviconized-tab-size);
  max-width: var(--faviconized-tab-size);
  width: var(--faviconized-tab-size);
  padding: calc((var(--faviconized-tab-size) - var(--favicon-size)) / 2);
}

.tab.pinned .closebox,
.tab.faviconized :-moz-any(
  .twisty,
  .label
) {
  display: none;
}

.tab.faviconized.unread:not(.active):not(:hover) {
  background-image: var(--unread-faviconized-gradient);
}

.tab.faviconized.unread:not(.active):hover {
  background-image: var(--unread-faviconized-gradient-hover);
}


/* tab label */

.tab .label {
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ".."; /*ellipsis*/;
  white-space: nowrap;
}

.tab:not([data-child-ids]) .counter,
.tab:not(.subtree-collapsed) .counter {
  display: none;
}

.counter::before {
  content: "(";
}

.counter::after {
  content: ")";
}


/* closebox */

.closebox {
  opacity: var(--button-opacity);
  position: relative;
}

.closebox::before {
  content: "✖";
}

.closebox:hover {
  opacity: var(--button-hover-opacity);
}

.closebox:active {
  opacity: var(--button-active-opacity);
}


/* contextual identity (aka Container Tab) */

.contextual-identity-marker {
  bottom: 0;
  position: absolute;
}

:root.left .tab:not(.faviconized) .contextual-identity-marker {
  right: 0;
  top: 0;
  width: calc(var(--favicon-size) / 6);
}

:root.right .tab:not(.faviconized) .contextual-identity-marker {
  left: 0;
  top: 0;
  width: calc(var(--favicon-size) / 6);
}

.tab.faviconized .contextual-identity-marker {
  height: calc(var(--favicon-size) / 6);
  left: 0;
  right: 0;
}


/* non-tab items */

#tabbar.overflow .after-tabs,
#tabbar:not(.overflow) ~ .after-tabs {
  display: none;
}

#tabbar ~ .after-tabs {
  bottom: 0;
  height: 0;
  justify-content: flex-end;
  left: 0;
  overflow: visible;
  position: fixed;
  right: 0;
}


.newtab-button-box {
  position: relative;
}

.newtab-button {
  background: none transparent;
  margin: 0;
  text-align: center;
}

.newtab-button-box:hover .contextual-identities-selector:not([disabled="true"]) {
  pointer-events: auto;
  opacity: 1;
}

.contextual-identities-selector {
  background: none;
  border: none;
  bottom: 0;
  max-width: 1.5em;
  opacity: 0;
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity var(--collapse-animation);
  z-index: 200;
}

.contextual-identities-selector option[value=""] {
  display: none;
}


#out-of-view-tab-notifier {
  background: transparent repeat-x bottom;
  background-image: -moz-linear-gradient(
                      bottom,
                      var(--tab-highlighted-glow) 0,
                      transparent 100%
                    );
  display: none;
  margin-top: calc(0 - var(--tab-height));
  min-height: var(--tab-height);
  pointer-events: none;
  position: relative;
  opacity: 0;
}

#out-of-view-tab-notifier.notifying {
  animation: blink var(--out-of-view-tab-notify-duration) ease-in-out 1;
  display: block;
}


/* blocking UI */

#blocking-screen {
  bottom: 0;
  display: none;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10000;
}

:root.blocking-throbber #blocking-screen {
  background: rgba(0, 0, 0, 0.35);
}

:root.blocking #blocking-screen {
  display: block;
}

